# GIFT

./: .coveragerc  .gitattributes  .gitignore  .markdown-link-check.json  AI_AGENTS.md  AUDIT_REPORT_2025-12-05.md  CHANGELOG.md  CITATION.cff  CITATION.md  CLAUDE.md  CLAUDE_QUICK.md  CLEANING_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDIT_OPTIMIZATION_MASTER_PLAN.md  EM_DASH_CLEANUP_REPORT.md  EXPLORATION_QUICK_REFERENCE.md  FEIGENBAUM_ANALYSIS_REPORT.md  GIFTPY_DEPLOYMENT_PLAN.md  GIFTPY_QUICKSTART.md  GIFTPY_README.md  INTEGER_FACTORIZATION_REPORT.md  K7_Riemann_Verification_v5_Topological_trained.ipynb  MANIFEST.in  NOTEBOOK_ANALYSIS_v0_8.md  OPTIMIZATION_DISCOVERY_PLAN.md  PHASE9_BINARY_SUMMARY.txt  QUICK_REFERENCE_v0_8.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  RUN_ALL_TESTS.sh  SECURITY.md  SESSION_COMPLETE_SUMMARY.md  STRUCTURE.md  SYNCHRONIZATION_REPORT.md  TESTING_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  V2.1_UPGRADE_SUMMARY.md  ZETA_RATIO_DISCOVERY_REPORT.md  (+23 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
COQ/: GIFT_Coq_Validation_Colab.ipynb  GIFT_Coq_Validation_Colab_Trained.ipynb  README.md  _CoqProject
G2_ML/: 1.0fK7_G2_TCS_ExplicitMetric_v1_0f.ipynb  COMPLETION_PLAN.md  Complete_G2_Metric_Training_v0_4.ipynb  Complete_G2_Metric_Training_v0_6c.ipynb  Complete_G2_Metric_Training_v0_7.ipynb  Complete_G2_Metric_Training_v0_8.ipynb  Complete_G2_Metric_Training_v0_9.ipynb  Complete_G₂_Metric_Training_v0_2.ipynb  Complete_G₂_Metric_Training_v0_3.ipynb  FUTURE_WORK.md  G2_TCS_Complete_v0_9_Colab.ipynb  G2_final_model.pt  G2_metric.onnx  G2_metric_analysis.json  G2_metric_samples.npz  K7_Hodge_b3_77_Validation_Colab.ipynb  LeanGIFT_Lean_Colab_fixed.ipynb  Numerical_G2_Metric_Construction.md  PLAN_TCS_G2_LEGIT.md  README.md  REORGANIZATION_2025-12-01.md  STATUS.md  VERSIONS.md  g2_training_history.csv  k7_g2_checkpoint_epoch_1500.pt  k7_g2_checkpoint_epoch_3000.pt  k7_g2_checkpoint_epoch_5500.pt
K7_ML/: G2K7_Training_Completed_Analysis.ipynb  G2_Training_Complete.ipynb  K7_Metric_Training_Colab.ipynb
Lean/: GIFT.lean  GIFT_Lean_Colab.ipynb  GIFT_Lean_Implementation_Plan.md  README.md  lakefile.lean
assets/: README.md  quick_start.py
audit/: claim_scope.md  dependency_graph.json  legacy_quarantine.md  theorem_ledger.yaml
certificates/: datum_D0.json  phase3_G_closure_status.json  phase3_Pi_obs_constant_mode_proto.json  phase3_Rquad_coefficient_scaffold.json  phase3_branch_seed_sanity.json  phase3_effective_jacobi_parametrix_candidate.json  phase3_gamma_src_surrogate_proto.json  phase3_kappa_src_extraction_plan.json  phase3_kappa_src_first_ansatz_proto.json  phase3_kappa_src_projection_proto.json  phase3_kappa_src_vs_G_discharge.json  phase3_mu_minus_half_basis.json  phase3_mu_minus_half_channel.json  phase3_mu_minus_half_matching_target.json  phase3_mu_minus_half_projector_proto.json  phase3_profile_to_trace_proto.json  phase3_projection_commutator_certificate.json  phase3_source_residual_ledger.json  phase4_ar_majorant_check.json  (+21 more)
(+2871 files in other folders)
