[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giftpy"
version = "0.1.0"
description = "Geometric Information Field Theory - Python package for unified physics predictions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GIFT Framework Collaboration", email = "gift@gift-framework.org"}
]
maintainers = [
    {name = "GIFT Framework Collaboration", email = "gift@gift-framework.org"}
]
keywords = [
    "physics",
    "theoretical-physics",
    "particle-physics",
    "standard-model",
    "cosmology",
    "topology",
    "e8",
    "exceptional-lie-algebras",
    "geometric-framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ipython>=8.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
]
all = [
    "giftpy[viz,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/gift-framework/GIFT"
Documentation = "https://giftpy.readthedocs.io"
Repository = "https://github.com/gift-framework/GIFT"
Issues = "https://github.com/gift-framework/GIFT/issues"
Changelog = "https://github.com/gift-framework/GIFT/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["giftpy", "giftpy.core", "giftpy.observables", "giftpy.topology", "giftpy.temporal", "giftpy.tools"]

[tool.setuptools.package-data]
giftpy = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["giftpy_tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=giftpy --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["giftpy"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
